<resources>
    <string name="app_name">Hoppler</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Login</string>
    <string name="title_section2">Register</string>
    <string name="title_section3">Listings Nearby</string>
    <string name="title_section4">Photo View</string>
    <string name="title_section5">Detail Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example"></string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="signin">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reg">REGISTER</string>

    <string name="userinfo_reg">U S E R I N F O R M A T I O N</string>
    <string name="email_reg">Email</string>
    <string name="firstname_reg">First Name</string>
    <string name="lastname_reg">Last Name</string>
    <string name="mobilenumber_reg">Mobile Number (Optional)</string>
    <string name="password_reg">Password</string>
    <string name="repassword_reg">Re-enter Password</string>
    <string name="wantto_reg">I Want to: </string>
    <string name="checkbox_search">Search through properties ONLY</string>
    <string name="checkbox_upload">Upload properties I OWN</string>
    <string name="checkbox_broker">Broker real-estate properties</string>
    <string name="subscribe1">Subscribe to the Hoppler Newsletter?</string>
    <string name="subscribe2">Subscribe to Hoppler Newsletter?</string>
    <string name="here_about">Where did you here about us?</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="bysigning1">By signing up you are aggreeing</string>
    <string name="bysigning2">to the Terms and conditions.</string>

    <string name="login_text">LOGIN</string>
    <string name="cancel_reg">CANCEL</string>

    <string name="login_activity_actions">Login</string>
    <string name="btn_nav_menu">Menu</string>
    <string name="btn_nav_search">Search</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_main_activity2"></string>
    <string name="title_activity_maps">Map</string>

    <string name="list_view">List View</string>

    <string name="facebook_app_id">403442849849521</string>

    <string name="inquire_pv">INQUIRE</string>

    <!--STATIC CONTENTS OF LISTVIEW-->
    <string name="house_address">Sample sample sample</string>
    <string name="house_sqm">234 sqm</string>
    <string name="house_br">2BR</string>
    <string name="house_ba">1BA</string>
    <string name="house_id">ID:21DC4</string>
    <string name="house_price">P105K</string>

    <!--STATIC CONTENTS OF PHOTOVIEW-->
    <string name="house_address_pv">Sample sample sample sample sample sample</string>
    <string name="house_sqm_pv">234 sqm</string>
    <string name="house_br_pv">2BR</string>
    <string name="house_ba_pv">1BA</string>
    <string name="house_id_pv">ID:21DC4</string>
    <string name="house_price_pv">P105K</string>

    <!--STATIC CONTENTS OF Detail Page-->
    <string name="house_address_dp">123 De la Rosa St. Legazpi Village Makati City 1229</string>
    <string name="house_sqm_dp">234 sqm</string>
    <string name="house_br_dp">2BR</string>
    <string name="house_ba_dp">1BA</string>
    <string name="house_id_dp">ID:21DC4</string>
    <string name="house_price_dp">P32,000</string>

    <!--STATIC CONTENTS OF Detail Page-->
    <string name="house_Features_dp">FEATURES</string>
    <string name="house_PropertyType_dp">Property Type:</string>
    <string name="house_Size_dp">Size:</string>
    <string name="house_Beds_dp">Beds:</string>
    <string name="house_Bath_dp">Bath:</string>
    <string name="house_LeaseExpDate_dp">Lease Exp. Date:</string>
    <string name="house_UpdatedOn_dp">Updated On:</string>

    <!--STATIC CONTENTS OF Detail Page-->
    <string name="house_PropertyType_text_dp">Occupied/For Rent</string>
    <string name="house_Size_text_dp">320 sqm</string>
    <string name="house_Beds_text_dp">3</string>
    <string name="house_Bath_text_dp">2</string>
    <string name="house_LeaseExpDate_text_dp">Jan. 03, 2016</string>
    <string name="house_UpdatedOn_text_dp">Apr. 23, 2015</string>

    <string name="house_Description_dp">DESCRIPTION</string>

    <!--STATIC CONTENTS OF Detail Page-->
    <string name="house_Description_text_dp">Legaspi Village is strategically located within Makati CBD which is known for the abundance of premium condominium buildings. Furthermore, the location also allows one to be a short walking distance to major office buildings, exclusive restaurants, premium bars, and cozy coffee shops.</string>
    <string name="house_Note_dp">*Price &amp; availability  can change without notice, and may not be reflected in the last posted update. Availability of a rent unit will be subject to the previous tenant\'s decision to renew their lease. For the latest status, please contact us.</string>

    <string name="inquire_dp">INQUIRE</string>
    <string name="giveuscall_dp">Give Us A Call:</string>
    <string name="referenceID_dp">Reference ID:</string>

    <!--STATIC CONTENTS OF Detail Page-->
    <string name="giveuscall_number_dp">(+632) 8900062</string>
    <string name="referenceID_text_dp">CR0119173</string>

    <!--STATIC CONTENTS OF Detail Page-->
    <string name="name_dp">Reynan Al</string>
    <string name="contactNumber_dp">0915 574 1377</string>
    <string name="email_dp">reynan@gmail.com</string>

    <string name="send_dp">SEND</string>





</resources>
