<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/sample_photoview"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp">
            <TextView
                android:id="@+id/house_price_pv"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/house_price_dp"
                android:layout_marginTop="80dp"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="#ffffff"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/house_sqm_pv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/house_sqm_dp"
                    android:fontFamily="Roboto-Bold"
                    android:textSize="15dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/house_br_pv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/house_br_dp"
                    android:fontFamily="Roboto-Bold"
                    android:textSize="15dp"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="14dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/house_ba_pv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/house_ba_dp"
                    android:fontFamily="Roboto-Bold"
                    android:textSize="15dp"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="14dp"
                    android:textStyle="bold"/>


                <Button
                    android:id="@+id/inquire_pv"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="70dp"
                    android:gravity="center"
                    android:textSize="19dp"
                    android:text="@string/inquire_pv"
                    android:textColor="@color/performance_bg"
                    android:background="@color/performance_orange_target"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/house_address_dp"
            android:text="@string/house_address_dp"
            android:singleLine="false"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:textSize="17dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icn_location"
            android:layout_gravity="bottom"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="330dp"
        android:layout_height="0.5dp"
        android:background="#000000"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_Features_dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/label_grey"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_PropertyType_dp"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_PropertyType_text_dp"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>
    <View
        android:layout_width="330dp"
        android:layout_height="0.5dp"
        android:background="@color/material_grey_400"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_Size_dp"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_Size_text_dp"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginLeft="115dp"/>
    </LinearLayout>
    <View
        android:layout_width="330dp"
        android:layout_height="0.5dp"
        android:background="@color/material_grey_400"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_Beds_dp"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_Beds_text_dp"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginLeft="110dp"/>
    </LinearLayout>
    <View
        android:layout_width="330dp"
        android:layout_height="0.5dp"
        android:background="@color/material_grey_400"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_Bath_dp"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_Bath_text_dp"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginLeft="114dp"/>
    </LinearLayout>
    <View
        android:layout_width="330dp"
        android:layout_height="0.5dp"
        android:background="@color/material_grey_400"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_LeaseExpDate_dp"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_LeaseExpDate_text_dp"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginLeft="25dp"/>
    </LinearLayout>
    <View
        android:layout_width="330dp"
        android:layout_height="0.5dp"
        android:background="@color/material_grey_400"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_UpdatedOn_dp"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_UpdatedOn_text_dp"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginLeft="60dp"/>
    </LinearLayout>
    <View
        android:layout_width="330dp"
        android:layout_height="0.5dp"
        android:background="@color/material_grey_400"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/house_Description_dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/house_Description_text_dp"
        android:layout_marginLeft="20dp"
        android:singleLine="false"/>

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/house_Note_dp"
        android:layout_marginLeft="20dp"
        android:singleLine="false"
        android:textColor="@color/performance_orange_target"/>
    <View
        android:layout_width="330dp"
        android:layout_height="0.5dp"
        android:background="@color/material_grey_400"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />



</LinearLayout>




