<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:background="@drawable/sample_photoview"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp">

            <TextView
                android:id="@+id/house_address_pv"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/house_address_pv"
                android:singleLine="false"
                android:textStyle="bold"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/house_price_pv"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/house_price_pv"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/house_sqm_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_sqm_pv"
                android:fontFamily="Roboto-Bold"
                android:textSize="10dp"
                android:textColor="#ffffff"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/house_br_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_br_pv"
                android:fontFamily="Roboto-Bold"
                android:textSize="10dp"
                android:textColor="#ffffff"
                android:layout_marginLeft="14dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/house_ba_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_ba_pv"
                android:fontFamily="Roboto-Bold"
                android:textSize="10dp"
                android:textColor="#ffffff"
                android:layout_marginLeft="14dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/house_id_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_id_pv"
                android:fontFamily="Roboto-Bold"
                android:textSize="10dp"
                android:textColor="#ffffff"
                android:layout_marginLeft="14dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/inquire_pv"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:gravity="top"
                android:text="@string/inquire_pv"
                android:textSize="8dp"/>
        </LinearLayout>
</LinearLayout>




