<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffffdfd"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hopplerlogo"
            android:src="@drawable/hopplerlogo"
            android:visibility="visible"/>
        <EditText
            android:id="@+id/username"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"/>
        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textSize="14sp"
            android:textColor="@color/text_grey"
            android:visibility="visible"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="#EEEEEE"
            android:id="@+id/signin"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:width="300dp"
            android:minHeight="40dp"
            android:background="@drawable/signinbutton"
            android:visibility="visible"/>
    </LinearLayout>
</LinearLayout>
